hphp/hack/test/typecheck/references/call_time_reference1.php.exp
File "call_time_reference1.php", line 4, characters 13-13:
An expression is expected here. (Parsing[1002])
