hphp/hack/test/typecheck/references/call_time_reference1.php
<?hh // partial

function test($x, $y) {
  test($y, &$x);
}
